@@ -1,6 +1,5 @@
-package ch.epfl.rigel.gui.bonus;
+package ch.epfl.rigel.gui.searchtool;
 
-import ch.epfl.rigel.Preconditions;
 import ch.epfl.rigel.astronomy.CelestialObject;
 import ch.epfl.rigel.astronomy.Moon;
 import ch.epfl.rigel.astronomy.ObservedSky;
@@ -26,7 +25,7 @@ import java.util.stream.IntStream;
  */
 public final class SearchBar {
 
-    private ObservedSky savedSky;
+    private ObservedSky cachedSky;
     private final Map<String, Set<CelestialObject>> initialsMap;
     private final Map<String, Set<Star>> hipparcosMap;
     private boolean initOngoing;
@@ -34,10 +33,15 @@ public final class SearchBar {
     private Set<CelestialObject> ongoingSearchSet;
     private String ongoingString;
 
+    /**
+     * SearchBar constructor
+     *
+     * @param sky (ObservedSky) current ObservedSky
+     */
     public SearchBar(final ObservedSky sky){
 
         this.initOngoing = true;
-        this.savedSky = sky;
+        this.cachedSky = sky;
         this.initialsMap = IntStream.rangeClosed('A', 'Z').boxed()
                 .collect(Collectors.toMap(
                         String::valueOf, HashSet::new, (u,v) -> u, HashMap::new
@@ -50,9 +54,15 @@ public final class SearchBar {
         this.initOngoing = false;
     }
 
-    public void updateWithSky(final ObservedSky sky) {
-        if (sky.celestialObjMap().keySet().equals(savedSky.celestialObjMap().keySet()) && !initOngoing) {
-            savedSky = sky;
+    /**
+     * Called before a search, skipped if sky's contents have not changed since last search, otherwise,
+     * refreshes the sets to search in
+     *
+     * @param sky (ObservedSky) potentially new sky
+     */
+    private void updateWithSky(final ObservedSky sky) {
+        if (sky.celestialObjMap().keySet().equals(cachedSky.celestialObjMap().keySet()) && !initOngoing) {
+            cachedSky = sky;
             return;
         }
         initialsMap.values().forEach(Set::clear);
@@ -60,32 +70,57 @@ public final class SearchBar {
         sky.celestialObjMap().keySet().forEach(
                 celestObj -> {
                     final String initial = String.valueOf(celestObj.name().charAt(0));
-                    if (initialsMap.containsKey(initial)) {
-                        initialsMap.get(initial).add(celestObj);
-                    } else {
+                    if (!initialsMap.containsKey(initial)) {
                         initialsMap.put(initial, new HashSet<>());
                     }
+                    initialsMap.get(initial).add(celestObj);
                     
                     if (celestObj instanceof Star) {
-                       // hipparcosMap.get(String.valueOf(((Star) celestObj).hipparcosId())).add((Star) celestObj);
+                        final String firstDigit = String.valueOf(String.valueOf(((Star) celestObj).hipparcosId()).charAt(0));
+
+                        if (!hipparcosMap.containsKey(firstDigit)) {
+                            hipparcosMap.put(firstDigit, new HashSet<>());
+                        }
+                        hipparcosMap.get(firstDigit).add((Star) celestObj);
                     }
                 }
         );
-        savedSky = sky;
+        cachedSky = sky;
     }
 
-    public Set<CelestialObject> search(final String inputString, final Filters filter, final SearchBy type) {
-        Preconditions.checkArgument(type != SearchBy.HIPPARCOS || filter == Filters.STARS);
+    /**
+     * Main method returning the set of possible celestial objects corresponding to given search parameters
+     *
+     * @param inputString (String)
+     * @param inputFilter (Filters) classes of CelestialObject to search in
+     * @param type (SearchBy) search either by hipparcos or name
+     * @param sky (ObservedSky) observed sky at moment of search
+     * @return (Set<CelestialObject>) said set
+     */
+    public Set<CelestialObject> search(final String inputString, final Filters inputFilter, final SearchBy type,
+                                       final ObservedSky sky) {
+
+        updateWithSky(sky);
+        final Filters filter = (type == SearchBy.HIPPARCOS) ? Filters.STARS : inputFilter;
+
         if (inputString.length() == 1) {
             return (!initialsMap.containsKey(inputString))? Set.of() : search(inputString, Set.copyOf(
                     (filter == Filters.STARS) ? hipparcosMap.get(inputString) : initialsMap.get(inputString)),
                     filter, type);
         }
-        return search(inputString, (ongoingString.length() < inputString.length()) ? ongoingSearchSet :
-                Set.copyOf((filter == Filters.STARS) ? hipparcosMap.get(inputString) :
-                        initialsMap.get(inputString.substring(0,2))), filter, type);
+        return Collections.unmodifiableSet(
+                search(inputString, (ongoingString.length() < inputString.length()) ? ongoingSearchSet :
+                Set.copyOf((filter == Filters.STARS) ? hipparcosMap.get(inputString.substring(0,2)) :
+                        initialsMap.get(inputString.substring(0,2))), filter, type));
     }
 
+    /**
+     * Gives the set of next possible string inputs according to following parameters:
+     *
+     * @param inputString (String) string entry
+     * @param type (SearchBy) search either by hipparcos or name
+     * @return (Set<String>) said set
+     */
     public Set<String> suggestions(final String inputString, final SearchBy type) {
         return ongoingSearchSet.stream()
                 .filter(celestObj -> type.stringFunction.apply(celestObj).length() > inputString.length())
@@ -93,6 +128,9 @@ public final class SearchBar {
                 .collect(Collectors.toCollection(HashSet::new));
     }
 
+    /**
+     * To be called once a search is done.
+     */
     public void endSearch() {
         ongoingString = "";
         ongoingSearchSet.clear();
@@ -105,9 +143,12 @@ public final class SearchBar {
                 .filter(celestObj -> filter.classList.contains(celestObj.getClass())
                         && type.stringFunction.apply(celestObj).startsWith(inputString))
                 .collect(Collectors.toCollection(HashSet::new));
-        return Collections.unmodifiableSet(ongoingSearchSet);
+        return ongoingSearchSet;
     }
 
+    /**
+     * Defines types of celestial objects to search
+     */
     public enum Filters {
 
         SOLAR_SYSTEM(List.of(Moon.class, Sun.class, Planet.class)),
@@ -119,12 +160,15 @@ public final class SearchBar {
         Filters(List<Class<? extends CelestialObject>> classList) {
             this.classList = classList;
         }
-        public List<Class<? extends CelestialObject>> classList() {
+
+        private List<Class<? extends CelestialObject>> classList() {
             return classList;
         }
     }
 
-
+    /**
+     * Defines the search criterion
+     */
     public enum SearchBy {
         NAME(CelestialObject::name),
         HIPPARCOS(celestObj -> (!(celestObj instanceof Star)) ?
